--- a/ex6/style.css
+++ b/ex6/style.css
@@ -27,7 +27,7 @@ div {
 }
 .content, .form {
     width: 40%;
-    background-color: #61efd0;
+    background-color: #3ea28e;
     border-radius: 15px;
     box-shadow: 2px 3px 3px 1px;
 }
